Fix Topics title misalign

--- a/styles/storage.css
+++ b/styles/storage.css
@@ -105,3 +105,10 @@
     font-family: 'Open Sans', sans-serif;
   }
   
+@media (max-width: 600px) {
+    .output-container h3 {
+        color: black; 
+        font-family: 'Pacifico', cursive;
+        font-size: 24px;
+      }
+}
