--- a/styles/video.css
+++ b/styles/video.css
@@ -16,6 +16,7 @@
     color: #FF69B4;
     font-family: 'Pacifico', cursive;
     font-size: 32px;
+    text-align: center;
 }
 
 .video-iframe {
